колонки сузил, линки с картинок убрал

--- a/index.html
+++ b/index.html
@@ -67,8 +67,12 @@ a:link, a:visited {
 }
 
 /* mouse over link */
-a:hover {
+#sex a:hover {
   color: yellow;
+}
+/* mouse over link */
+a:hover {
+  color: white;
 }
 
 /* selected link */
@@ -93,17 +97,16 @@ a:active {
 
       <p style="line-height: 18pt; font-size: 16pt;"><b>My craft is unusual experiments in contemporary art</b>:  performance, anti-dance, electronic sounds, dramaturgy. <br>I pursue ideas that lead us beyond everyday life. There we can experience an unfamiliar states and feel something differently.</p>
 
-           <br><br> <div style="text-align: center;"><a style="border-bottom: 0px;" href="dan-files/i/dan_rooftop_f.jpg"
-          target="_blank"><img 
+           <br><br> <div style="text-align: center;"><img 
             src="dan-files/i/dan_rooftop.jpg"
-            style="height: 600px;  border: 4px #ff073a solid"></a><br>
+            style="height: 600px;  border: 4px #ff073a solid"><br>
       </div><br>
 
-<p style="line-height: 18pt; font-size: 12pt;">I applied performance practices in the urban space, Butoh dance, mix of field recoding at Ableton software, verbatim in the doc theater, production of documentary and feature films to achieve this. I figured out post-drama theater, postmodernism and metamodernism. And I keep looking for new tools. <br> <span class="yellow-highlight">See artworks below...</span></p>
+<p style="line-height: 18pt; font-size: 12pt; padding-left: 96px; padding-right: 88px">I applied performance practices in the urban space, Butoh dance, mix of field recoding with Ableton software, verbatim in the doc theater, production of documentary and feature films to achieve this. I figured out post-drama theater, postmodernism and metamodernism. And I keep looking for new tools. <br> <span class="yellow-highlight">See artworks below...</span></p>
 
  <br>              <hr style="border:0; border-top: 2px dotted #373737"><br>
 
-<p style="line-height: 18pt; font-size: 14pt;"><b>You can cooperate with me when somebody unusual is required.</b> Like participation in weird contemporary performance, creating a track from strange sounds, documentary theater on the topic nobody wants to talk about, etc. <br> <span class="yellow-highlight">See contacts at the bottom...</span></p>
+<p style="line-height: 18pt; font-size: 14pt; padding-left: 30px; padding-right: 210px"><b>You can cooperate with me when somebody unusual is required.</b> Like participation in weird contemporary performance, creating a track from strange sounds, documentary theater on the topic nobody wants to talk about, etc. <br> <span class="yellow-highlight">See contacts at the bottom...</span></p>
 
 <p style="line-height: 12pt; font-size: 10pt;">Fortunately, can't help you with a ordinary art. Especially for TV. </p>
 
@@ -112,6 +115,7 @@ a:active {
 <br>
       
       <h1 style="color: #cfff04">ARTWORKS</h1>
+      <div style="padding-left: 196px; padding-right: 40px">
       <span style="font-size: 16pt;">Now I use my various skills to create <a href="art/hybridart/">hybrid
           and interdisciplinary art projects</a>.</span>
       <p style="line-height: 18pt; font-size: 14pt;">At the age of 32 I met the
@@ -127,18 +131,17 @@ a:active {
           the "Zenit" camera. Then it became the basis for <a href="art/early/">early
             artworks</a>.<br>
       </p>
+</div>
 
-
-      <br><br><br><br><div style="text-align: center;"><a style="border-bottom: 0px" href="dan-files/i/under_the_brdge_f.jpg"
-          target="_blank"><img
+      <br><br><br><br><div style="text-align: center;"><img
             src="dan-files/i/under_the_brdge.jpg"
-            style="height: 600px;  border: 4px #ff073a solid"></a><br>
+            style="height: 600px;  border: 4px #ff073a solid"><br>
       </div>             <i style="line-height: 12pt; font-size: 9pt;">For the past 10 years, I’ve been working on designing experiences and
         journeys that touch people's inner Self.</i>          
       <br><br><br>
-      <p style="line-height: 18pt; font-size: 12pt;">Also I know how to master the organization aspect: spliting the process into stages and keeping track of deadlines. For the art to take place, it is necessary to find the equipment, gather the audience through the social network and conduct a reasonable discussion-analysis afterwards. I did all that for many times.</p>
+      <p style="line-height: 18pt; font-size: 12pt;  padding-left: 96px; padding-right: 88px">Also I know how to master the organization aspect: spliting the process into stages and keeping track of deadlines. For the art to take place, it is necessary to find the equipment, gather the audience through the social network and conduct a reasonable discussion-analysis afterwards. I did all that for many times.</p>
 
-<p style="line-height: 18pt; font-size: 14pt;">But when there are a <span class="yellow-highlight">manager, vegan food and budget</span>, I can put more attention into the idea itself. Contact me and we’ll make the art.</p>
+<p style="line-height: 18pt; font-size: 14pt;">But when there are a <span class="yellow-highlight">manager, vegan food and budget</span>, I can put more attention into the idea itself. <br/><br/> Contact me and we’ll make the art.</p>
 
 
     </div>
