--- a/startups/index.html
+++ b/startups/index.html
@@ -17,16 +17,43 @@
  
 
     <span style="color: gray">2019–21</span> — telegram bot about Babi Yar (Kyiv) events during WW2  <br/><br/>
-    <span style="color: gray">2017–19</span> — new <strong>Kyiv urban hikes</strong>: Throught the City <br/><br/>
-    <span style="color: gray">2017–18</span> — Open educational project "Sex Education Week", Kyiv</a> <br/>
-    <span style="color: gray">2017</span> — Self-tranformational diary online facebook group "87" <br/>
+    <span style="color: gray">2017–19</span> — new <strong>Kyiv urban hikes</strong>: Throught the City <br/>
 
-    <span style="color: gray">2016–17</span> — <a href="http://apps.danvoronov.com/kievfalafel/">Mapping of Kyiv's falafel points</a> <br/><br/>
+    <br/>
+    <img src="dan-files/i/sexeduweek.jpg" style="height: 338px;"><br>
+    <b>Sex Education Week</b><br/>
+    <span style="color: gray">2017–18</span> — Open educational project "Sex Education Week", Kyiv <br/>
+    <a href="https://www.mixcloud.com/OFRUkraine/%D1%81%D0%B5%D0%BA%D1%81-%D0%BF%D1%80%D0%BE%D1%81%D0%B2%D0%B5%D1%89%D0%B5%D0%BD%D0%B8%D0%B5-%D0%B2%D1%8B%D0%BF%D1%83%D1%81%D0%BA-6-%D0%BE%D1%80%D0%B3%D0%B0%D0%BD%D0%B8%D0%B7%D0%B0%D1%82%D0%BE%D1%80%D1%8B-sex-education-week/" target="black">mixcloud.com podcast-interview</a>
+    <br/>
+    <br/> <br/>
 
-   <span style="color: gray">2010–11</span> — Saturday's <a href="http://danvoronov.com/ru/kievpohod/">Kyiv urban hikes</a><br/>
-   <span style="color: gray">2010</span> — Svoyo Delo: online system for career guidance<br/><br/>
+<br/>
+<b>87</b><br/>
+    <span style="color: gray">2017</span> — Self-tranformational diary online privat facebook group "87" for 87 people.<br/>
+    <i>https://87.dan.kiev.ua</i>
 
-   <span style="color: gray">2003–07</span> — <a href="http://www.bioritmi.narod.ru" target="black">Biorhythms calculator</a> (freeware program for Windows)<br/>
+<br/>
+    <img src="dan-files/i/falafelmap.jpg" style="width: 600px;"><br>
+    <b>Falafel map</b><br/>
+    <span style="color: gray">2016–17</span> — Mapping of Kyiv's falafel points with price and commenting.<br/>
+    <a href="http://apps.danvoronov.com/kievfalafel/" target="black">apps.danvoronov.com/kievfalafel</a>
+    <br/>
+    <br/> <br/>
+
+   <img src="https://lh6.ggpht.com/-zd6j8MhBvAg/TwGW2hSSjvI/AAAAAAAABqQ/2AMNX0TjQ5Y/s720/23102010%252528032%252529.jpg" style="height: 338px;"><br>   
+   <b>Kyiv urban hikes</b><br/>
+   <span style="color: gray">2010–11</span> — Open Saturday's hikes thru unknown Kyiv<br/>
+   <a href="http://danvoronov.com/ru/kievpohod/" target="black">danvoronov.com/ru/kievpohod</a>
+   <br/>
+   <br/> <br/>
+   <iframe src="https://player.vimeo.com/video/12242881?color=ff9933" width="600" height="338" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+   <b>Svoyo Delo</b><br/>
+   <span style="color: gray">2010</span> — online system for career guidance. LAMP+jQuery. <br/><i>svoyodelo.com</i><br/><br/> <br/>
+
+<img src="http://www.bioritmi.narod.ru/image/scr/screen.png" style="height: 338px;"><br>
+   <b>Biorhythms calculator</b><br/>
+   <span style="color: gray">2003–07</span> — freeware Delphi program for Windows.
+   <br/><a href="http://www.bioritmi.narod.ru/prog.html" target="black">bioritmi.narod.ru</a> <br/><br/>
 </div>
 <br/>   <a href="../" style="color: #DD4723">< home</a><br/>
 
