--- a/prj/throughthecity/index.html
+++ b/prj/throughthecity/index.html
@@ -9,6 +9,7 @@
 
 <body>
 <div class="overboxtxt">ThroughtheCity</div>
+<div>Here will be promo site.</div>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
