--- a/startups/index.html
+++ b/startups/index.html
@@ -17,7 +17,13 @@
  
 
     <span style="color: gray">2019–21</span> — telegram bot about Babi Yar (Kyiv) events during WW2  <br/><br/>
-    <span style="color: gray">2017–19</span> — new <strong>Kyiv urban hikes</strong>: Throught the City <br/>
+    
+    <br/><br/>
+    <img src="https://danvoronov.com/dan-files/i/throughtthekiev.jpg" style="width: 600px;">
+    <br/>
+    <b>Throught the Kyiv</b><br/>
+    <span style="color: gray">2017–19</span> — new Kyiv urban hikes: Throught the City for all day walking. 35-44 km <br/>
+    <a href="https://danvoronov.com/prj/throughthecity/" target="black">danvoronov.com/prj/throughthecity</a>
 
     <br/><br/>
     <img src="https://danvoronov.com/dan-files/i/sexeduweek.jpg" style="height: 338px;"><br>
