линк фикс и начало редюс индекса

--- a/art/index.html
+++ b/art/index.html
@@ -29,7 +29,7 @@
         <br>
         <h2>ARTWORKS</h2>
         <span style="font-size: 16pt;">Now I use my various skills to create <a
-            href="hybrid">hybrid
+            href="hybridart/">hybrid
             and interdisciplinary art</a> projects.</span>
         <p style="line-height: 18pt; font-size: 14pt;">At the age of 32 I met
           the <a href="butoh/">Butoh dance</a> and became a member of the
