Startups page update

--- a/startups/index.html
+++ b/startups/index.html
@@ -15,8 +15,8 @@
         <h2>My startups</h2>
       <div style="padding-top: 20px; font-size: 16pt; line-height: 24pt; ">
  
-
-    <span style="color: gray">2019–21</span> — telegram bot about Babi Yar (Kyiv) events during WW2  <br/><br/>
+    <img src="botBY.jpg" style="width: 600px;"><br>
+    <span style="color: gray">2019–22</span> — telegram bot about Babi Yar (Kyiv) events during WW2  <br/><br/>
     
     <br/><br/>
     <img src="https://danvoronov.com/dan-files/i/throughtthekiev.jpg" style="width: 600px;">
@@ -25,7 +25,9 @@
     <span style="color: gray">2017–19</span> — new Kyiv urban hikes: Throught the City for all day walking. 35-44 km <br/>
     <a href="https://danvoronov.com/prj/throughthecity/" target="black">danvoronov.com/prj/throughthecity</a>
 <br/>
-    <br/><br/>
+    <br/>
+    <hr style="min-height: 10px; background-color: #e5950c; border: 0px;"/>
+    <br/>
     <img src="https://danvoronov.com/dan-files/i/sexeduweek.jpg" style="height: 338px;"><br>
     <b>Sex Education Week</b><br/>
     <span style="color: gray">2017–18</span> — Open educational project "Sex Education Week", Kyiv <br/>
@@ -38,13 +40,13 @@
     <i>https://87.dan.kiev.ua</i>
     <br/>
     <br/> <br/>
-    <img src="https://danvoronov.com/dan-files/i/falafelmap.jpg" style="width: 600px;"><br>
+    <img src="https://danvoronov.com/dan-files/i/falafelmap.jpg" style="width: 600px;"><br>    
     <b>Falafel map</b><br/>
     <span style="color: gray">2016–17</span> — Mapping of Kyiv's falafel points with price and commenting<br/>
     <a href="http://apps.danvoronov.com/kievfalafel/" target="black">apps.danvoronov.com/kievfalafel</a>
     <br/>
       <br/>
-      <hr/>
+      <hr style="min-height: 10px; background-color: #e5950c; border: 0px;"/>
     <br/> <br/>
    <img src="https://lh6.ggpht.com/-zd6j8MhBvAg/TwGW2hSSjvI/AAAAAAAABqQ/2AMNX0TjQ5Y/s720/23102010%252528032%252529.jpg" style="height: 338px;"><br>   
    <b>Kyiv urban hikes</b><br/>
@@ -54,9 +56,11 @@
    <br/> <br/>
    <iframe src="https://player.vimeo.com/video/12242881?color=ff9933" width="600" height="338" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
    <b>Svoyo Delo</b><br/>
-   <span style="color: gray">2010</span> — online system for career guidance. LAMP+jQuery. <br/><i>svoyodelo.com</i><br/><br/> <br/>
+   <span style="color: gray">2010</span> — online system for career guidance. LAMP+jQuery. <br/><i>svoyodelo.com</i><br/><br/> 
+   <hr style="min-height: 10px; background-color: #e5950c; border: 0px;"/>
+   <br/>
 
-<img src="http://www.bioritmi.narod.ru/image/scr/screen.png" style="height: 338px;"><br>
+<img src="PVB.png" style="height: 338px;"><br>
    <b>Biorhythms calculator</b><br/>
    <span style="color: gray">2003–07</span> — freeware Delphi program for Windows.
    <br/><a href="http://www.bioritmi.narod.ru/prog.html" target="black">bioritmi.narod.ru</a> <br/><br/>
