--- a/index.html
+++ b/index.html
@@ -1,135 +1,19 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Dan Voronov</title>
-    <meta name="description" content="Personal site of Dan Voronov, artist.">
-    <meta name="author" content="Dan Voronov">
-    <link href="https://fonts.googleapis.com/css2?family=Exo+2&display=swap" rel="stylesheet"> 
-    <style type="text/css">
-        @-webkit-keyframes Green {
-          0%{background-position:0% 50%}
-          50%{background-position:100% 50%}
-          100%{background-position:0% 50%}
-      }
-      @-moz-keyframes Green {
-          0%{background-position:0% 50%}
-          50%{background-position:100% 50%}
-          100%{background-position:0% 50%}
-      }
-      @keyframes Green { 
-          0%{background-position:0% 50%}
-          50%{background-position:100% 50%}
-          100%{background-position:0% 50%}
-      }
-      .yellow-highlight {
-        text-shadow: 
-          -3px 0px 3px  rgb(249,189,36, 50),
-           3px 0px 3px  rgb(249,189,36, 50),
-           6px 0px 6px  rgb(249,189,36, 50),
-          -6px 0px 6px  rgb(249,189,36, 50);
-      }
-
-.quadrat {
-  line-height: 36pt; font-size: 28pt; padding: 20px; 
-  border: 1px dotted #FF2079;
-  -webkit-animation: NAME-YOUR-ANIMATION 2s infinite;  /* Safari 4+ */
-  -moz-animation: NAME-YOUR-ANIMATION 2s infinite;  /* Fx 5+ */
-  -o-animation: NAME-YOUR-ANIMATION 2s infinite;  /* Opera 12+ */
-  animation: NAME-YOUR-ANIMATION 2s infinite;  /* IE 10+, Fx 29+ */
-}
-@-webkit-keyframes NAME-YOUR-ANIMATION {
-  0%, 24% {
-    background-color: #29b6f6;
-    color: white; 
-  }
-  25%, 49% {
-     background-color: #39ff14;
- /* #FF2079; = красноватый */
-     color: black; 
-  }  
-  50%, 74% {
-    background-color: #E92EFB; 
-    color: white; 
-  }
-  75%, 100% {
-    background-color: #FFAA01;
-     color: black; 
-  }
-}
-/* unvisited link */
-a:link, a:visited {
-  color: #6a1b9a;
-}
-#sex a:link, #sex a:visited {
-  color: #d725de;
-  text-decoration: none;
-}
-
-/* mouse over link */
-#sex a:hover {
-  color: yellow;
-}
-/* mouse over link */
-a:hover {
-  color: white;
-}
-
-/* selected link */
-a:active {
-  color: blue;
-}
-  </style>
-  </head>
-  <body style="background: linear-gradient(224deg, #13CA91, #FF9472); background-size: 400% 400%; -webkit-animation: Green 30s ease infinite; -moz-animation: Green 30s ease infinite; animation: Green 30s ease infinite; font-family: 'Exo 2', sans-serif;">
-    <div id="sex" style="margin: auto; width: 600px;  background-color: #35212A; color: #fff; border: 8px solid #00e676; left: 0; top: -60px; right: 0; bottom: 0; padding: 30px; border-bottom: 0px;">
-      
-      <h2 style="padding: 0; margin: 0; color: gray;"><a href="now/">NOW</a>
-        &nbsp;&nbsp;&nbsp;<a href="speaker/">SPEAKER</a>
-        &nbsp;&nbsp;&nbsp;<a href="startups/">STARTUPS</a>
-        &nbsp;&nbsp;&nbsp;<a href="about/">ABOUT</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a
-          href="ru/">СТАТЬИ</a> </h2>
-<br><br>
-                <h1 style="font-size: 44pt; padding: 0; margin-left: -90px; color: #FF2079; width: 820px;">Dan Voronov <span style="color: #373737">/</span> Дан Вóронов</h1>
-          
-      <br>
-
-      <h2 style="color: #cfff04">ARTWORKS</h2>
-      <div style="padding-left: 196px; padding-right: 40px">
-      <span style="font-size: 16pt;">I use my various skills to create <a href="art/hybridart/">hybrid
-          and interdisciplinary art projects</a>.</span>
-      <p style="line-height: 18pt; font-size: 14pt;">At the age of 32 I met the
-        <a href="art/butoh/">Butoh dance</a> and became a member of the "ZA" dancing
-        group. I also do solo <a href="art/performance/">urban performances</a>.</p>
-      <p style="line-height: 18pt; font-size: 14pt;">From the age of 27 I have
-        been using my dramaturgic skill and desire to explore the world in the <a
-          href="art/film/">film</a>
-        and <a href="art/theater/">theater</a> projects. And my infinite love to
-        sound in the <a href="art/music/">electro-musical</a> projects.</p>
-      <p style="line-height: 16pt; font-size: 10pt;">As a teenager I
-          played guitar and drums, wrote poems and stories. I photographed on
-          the "Zenit" camera. Then it became the basis for <a href="art/early/">early
-            artworks</a>.<br>
-      </p>
-      </div>
-
-    </div>
-    <div style="margin: auto; width: 600px;  background-color: #00e676; border: 8px solid #00e676; border-top: 0px; left: 0; top: -60px; right: 0; bottom: 0; padding: 30px">
-      <p style="font-size: 20pt; padding-top: 3px">Feel free to <a href="mailto:dan.voronov@pm.me">mail</a> or <a target="_blank" href="https://t.me/dan_voronov">telegram</a>
-        me and follow in:</p>
-      <p style="font-size: 16pt">&gt; <a target="_blank" href="https://www.goodreads.com/danvoronov">goodreads (reading list)</a>
-        &gt; <a target="_blank" href="https://www.youtube.com/user/DanVoronov/videos">youtube</a>
-        &gt; <a target="_blank" href="https://t.me/dv_prj">telegram (public)</a>
-      </p>
-    </div>
+<html><head>
+<meta charset="utf-8"><meta name="viewport" cntent="width=device-width, initial-scale=1">
+<meta name="description" content="Personal site of Dan Voronov."><meta name="author" content="Dan Voronov">
+<script src="dan-files/js/jquery-3.6.0.min.js"></script><script src="dan-files/js/d3.v4.min.js"></script> 
+<title>Dan Voronov — Personal site</title> 
+<link rel="stylesheet" href="dan-files/js/graph.css">	
+</head>
+<body style="background-color: black;"><div id="graph"></div>
+	<script src="dan-files/js/graph.js"></script>
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
   ga('create', 'UA-5293921-1', 'auto');
   ga('send', 'pageview');
 </script>
-  </body>
-</html>
+</body></html>
