reading list menu

--- a/ru/prochital/index.html
+++ b/ru/prochital/index.html
@@ -6,6 +6,7 @@
 <script src="data/books_data_v8.js"></script>
 </head>			
 <body>
+	<div id='toppanel'><a href="../../">&lt; back</a>  |  <a target="_blank" href="https://www.goodreads.com/danvoronov">my goodreads profile</a></div>
 <div id="content">
 	<div class="leftfilter disa">
 		<div class="lfftr bkg" value="" onClick='cat_click("")'>[ЛЮБАЯ]</div>
