--- a/art/index.html
+++ b/art/index.html
@@ -1,36 +1,37 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>ARTWORKS | Dan Voronov</title>
-    <meta name="description" content="Personal site of Dan Voronov, artist.">
-    <meta name="author" content="Dan Voronov">
-    <style type="text/css">
-        @-webkit-keyframes Green {
-          0%{background-position:0% 50%}
-          50%{background-position:100% 50%}
-          100%{background-position:0% 50%}
-      }
-      @-moz-keyframes Green {
-          0%{background-position:0% 50%}
-          50%{background-position:100% 50%}
-          100%{background-position:0% 50%}
-      }
-      @keyframes Green { 
-          0%{background-position:0% 50%}
-          50%{background-position:100% 50%}
-          100%{background-position:0% 50%}
-      }
-  </style>
-  </head>
-  <body style="   background: linear-gradient(224deg, #22c76e, #53a9b1); background-size: 400% 400%; -webkit-animation: Green 30s ease infinite; -moz-animation: Green 30s ease infinite; animation: Green 30s ease infinite;">
+<!DOCTYPE html><html><head>
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+  <title>ARTWORKS by Dan Voronov</title>
+  <meta name="description" content="Personal site of Dan Voronov">
+  <meta name="author" content="Dan Voronov">
+  <style type="text/css">
+      @-webkit-keyframes Green {
+        0%{background-position:0% 50%}
+        50%{background-position:100% 50%}
+        100%{background-position:0% 50%}
+    }
+    @-moz-keyframes Green {
+        0%{background-position:0% 50%}
+        50%{background-position:100% 50%}
+        100%{background-position:0% 50%}
+    }
+    @keyframes Green { 
+        0%{background-position:0% 50%}
+        50%{background-position:100% 50%}
+        100%{background-position:0% 50%}
+    }
+</style>
+</head><body style="   background: linear-gradient(224deg, #22c76e, #53a9b1); background-size: 400% 400%; -webkit-animation: Green 30s ease infinite; -moz-animation: Green 30s ease infinite; animation: Green 30s ease infinite;">
+    
     <div style="margin: auto; width: 600px;  background-color: white; border: 10px solid #22c76e; left: 0; top: -60px; right: 0; bottom: 0; padding: 30px;">
-      <a href="../" style="color: #DD4723">&lt; home</a><span style="padding-left: 160px;">
-        <br>
+      
+      <a href="../" style="color: #DD4723"><b>&lt; back</b></a> | <a href="https://danvoronov.medium.com/%D0%B4%D0%B0%D0%BD-%D0%B2%D0%BE%D1%80%D0%BE%D0%BD%D0%BE%D0%B2-%D0%B0%D1%80%D1%82-2008-18-268ff6376777" target="black">все сразу на русском</a>
+
+        <br><br><br>
         <h2>ARTWORKS</h2>
         <span style="font-size: 16pt;">Now I use my various skills to create <a
             href="hybridart/">hybrid
             and interdisciplinary art</a> projects.</span>
+
         <p style="line-height: 18pt; font-size: 14pt;">At the age of 32 I met
           the <a href="butoh/">Butoh dance</a> and became a member of the
           "ZA" dancing group. I also do solo <a href="performance/">urban
@@ -40,22 +41,14 @@
           <a href="film/">film</a> and <a href="theater/">theater</a>
           projects. And my infinite love to sound in the <a href="music/">electro-musical</a>
           projects.</p>
-        <p style="line-height: 18pt; font-size: 14pt;"><br>
-        </p>
+
+        <p style="line-height: 18pt; font-size: 14pt;"><br></p>
+
         <p style="line-height: 18pt; font-size: 14pt;"> <em>As a teenager I
             played guitar and drums, wrote poems and stories. I photographed on
             the "Zenit" camera. Then it became the basis for <a href="early/">early
               artworks</a>.</em><br>
         </p>
-        <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-5293921-1', 'auto');
-  ga('send', 'pageview');
-
-</script> </span></div>
-  </body>
-</html>
+</div>
+<script src='../dan-files/js/ga.js'></script></body></html>
