--- a/index.html
+++ b/index.html
@@ -2,18 +2,15 @@
 <html><head>
 <meta charset="utf-8"><meta name="viewport" cntent="width=device-width, initial-scale=1">
 <meta name="description" content="Personal site of Dan Voronov."><meta name="author" content="Dan Voronov">
-<script src="dan-files/js/jquery-3.6.0.min.js"></script><script src="dan-files/js/d3.v4.min.js"></script> 
+<script src="dan-files/js/lib/jquery-3.6.0.min.js"></script>
+<script src="dan-files/js/lib/d3.v4.min.js"></script> 
 <title>Dan Voronov — Personal site</title> 
-<link rel="stylesheet" href="dan-files/js/graph.css">	
+<link rel="stylesheet" href="dan-files/css/graph.css">	
+<style type="text/css">body { margin:0; padding:0; background-size: cover;
+    background:url("dan-files/Milky_Way_Galaxy.jpg") no-repeat center center fixed;  
+}</style>
 </head>
 <body style="background-color: black;"><div id="graph"></div>
-	<script src="dan-files/js/graph.js"></script>
-    <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-5293921-1', 'auto');
-  ga('send', 'pageview');
-</script>
+<script src="dan-files/js/graph.js"></script>
+<script src="dan-files/js/ga.js"></script>
 </body></html>
