startups one more time )

--- a/startups/index.html
+++ b/startups/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html><html><head><meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
-  <meta name="author" content="Dan Voronov">
   <title>Startups by Dan Voronov</title>
-  <link rel="stylesheet" href="../dan-files/js/showcase.css">
+  <link rel="stylesheet" href="../dan-files/css/showcase.css">
   <style type="text/css">.item {width: 600px }</style>
 </head><body>
 
@@ -41,7 +40,7 @@
 
      <div class='item'>
       <h3>Kyiv urban hikes</h3>
-      <img src="../dan-files/i/strp/strp/kyivhikes.jpg" style="height: 338px;"> 
+      <img src="../dan-files/i/strp/kyivhikes.jpg" style="height: 338px;"> 
       <p><span>2010–11</span> Open Saturday's hikes thru unknown Kyiv. Started from new vk.com  section "looking for a travel companion".</p>
       <p>Public speaking about the importance of knowing where you live. Creating video from my Pecha Kucha presentation.</p>
       <p class="codeinfo">Website-catalog <a href="http://danvoronov.com/ru/kievpohod/" target="black">/kievpohod</a> was build with WordPress engine. Using Yandex map and Google Picasa photo albums.
@@ -106,6 +105,7 @@
   </div> 
  </div> 
 </div> 
+
 <script src='../dan-files/js/bg.js'></script>
 <script src='../dan-files/js/ga.js'></script>
 </body></html>
