--- a/startups/index.html
+++ b/startups/index.html
@@ -58,14 +58,14 @@
       <h3>87 online</h3>
       <img src="../dan-files/i/strp/87online.jpg" style="height: 338px;">
       <p><span>2017-18</span> Unic self-tranformational weekly diary <i>privat</i> facebook group</p>
-      <p>Initial entrance interview (offline and online). Web-app for task catalog (also on <a target="_blank" href="https://trello.com/b/B4NQ2JAz/87-online">trello</a>). Video instructions and everyday communications with participants. </p>
+      <p>Initial offline and online entrance interviews. Web-app for task catalog (starting as <a target="_blank" href="https://trello.com/b/B4NQ2JAz/87-online">trello board</a>). Video instructions and everyday communications with participants. </p>
       <p class="codeinfo">Promo site and video was at <i>87.dan.kiev.ua</i></p>
     </div>
     <div class='item'>
       <h3>Coping with jealousy</h3>
       <img src="../dan-files/i/strp/revnost.png" style="width: 600px;">  
       <p><span>2016–17. Kyiv, Kharkiv</span> Integrated tranformational experience for overcoming personal limits in relationships. </p>
-      <p class="codeinfo">Created by me from scratch powerfull offline training program + online (facebook) awareness marathon-diary with personal tasks + discussion support group</p>
+      <p class="codeinfo">Created by me powerfull offline training program + online awareness marathon-diary with personal tasks [facebook group] + discussion support group</p>
     </div>    
   </div>
 </div>
