--- a/educator/index.html
+++ b/educator/index.html
@@ -43,7 +43,7 @@
 
     <div class='item'>
       <h3>On Game Design</h3>
-      <p><span>2019</span> While I've studied game design i've posted videos on youtube with my reflection at interesting aspects of games and their meaning to society.</p>
+      <p><span>2019</span> While I've studied game design i've posted videos on youtube with my reflecture at interesting aspects of games and their meaning to society.</p>
       <p>YT: <a target="_blank" href="https://www.youtube.com/playlist?list=PLDCtcGu_t8_09QPnttgnRqEbDsmgSKar1">playlist</a></p>
     </div>    
 
@@ -57,7 +57,7 @@
   <div class='cont'>
 
     <div class='item'>
-      <h3>Polyamory lection</h3>
+      <h3>Polyamory lecture</h3>
       <img src="../dan-files/i/edu/poly.jpg" style="width: 355px;">
       <p><span>2016-17. Kyiv</span> This my lecture analyzed in great details the origins and iconic texts from the formation of polyamory concept only.</p>
     </div>
@@ -70,7 +70,7 @@
     </div>
   
     <div class='item'>
-      <h3>Non-monogamy lection</h3>
+      <h3>Non-monogamy lecture</h3>
       <img src="../dan-files/i/edu/nmlect.jpg" style="width: 355px;">
       <p><span>2015-16. Kyiv, Kharkiv</span> My lecture on the various forms of non-monogamous relationships became very popular and went through many revisions and places.</p>
       <p>One time we filmed and then cut it into short videos for "Creative love" project.</p>      
@@ -115,7 +115,7 @@
       <h3>Writing practices</h3>
       <img src="../dan-files/i/edu/pismprk.jpg" style="width: 355px;">
       <p><span>2016. Kyiv</span> I systematized all writing practices in psychology into four categories [stream of consciousness, questions, dialogue, self image] and then ctreated "Writing practices for self-development" course. </p>
-      <p>I made a simplified version in form of video lection for youtube.</p>
+      <p>I made a simplified version in form of video lecture for youtube.</p>
       <p>YT: <a target="_blank" href="https://youtu.be/Eiyj10Bsh7w">video</a></p>
     </div> 
     
@@ -231,7 +231,7 @@
     </div>    
 
     <div class='item'>
-      <h3>Web 2.0 lections</h3>
+      <h3>Web 2.0 lectures</h3>
       <img src="../dan-files/i/edu/educamp.jpg" style="width: 355px;">
       <p><span>2008. Kyiv</span> 
         I made a few lectures about the web 2.0 related topics at several universities and finaly at the event EduCamp.
