--- a/startups/index.html
+++ b/startups/index.html
@@ -7,7 +7,7 @@
 <canvas id="starfield"></canvas>
 
 
-<div id='toppanel'><a class="back" href="../../">&lt; back</a>  |  <a target="_blank" href="https://www.github.com/danvoronov">my github</a> |  <a target="_blank" href="https://www.codewars.com/users/danvoronov">my codewars</a></div>
+<div id='toppanel'><a class="back" href="../">&lt; back (ESC)</a>  |  <a target="_blank" href="https://www.github.com/danvoronov">my github</a> |  <a target="_blank" href="https://www.codewars.com/users/danvoronov">my codewars</a></div>
 
 <div id="hdr"><h1><span id='hin'>My startups<span></h1></div>
 
@@ -79,7 +79,7 @@
      <p><iframe src="https://player.vimeo.com/video/12242881?color=ff9933" width="600" height="338" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></p>
      <p><span>2010-11</span> Online system for career guidance. Based on my <a href="https://maup.com.ua/eng/index.html" target="black">IAPM</a> graduation research and extended with a personality test for greater accuracy. Has database of various professions.</p>
 
-      <p class="codeinfo">Codded and designed by me from scratch. LAMP (MySQL, PHP) and jQuery.</p>
+      <p class="codeinfo">Codded and designed by me from scratch. LAMP (MySQL, PHP) and jQuery + jQuery UI.</p>
       <p>Was at <i>svoyodelo.com</i>. See <a href="https://github.com/danvoronov/svoyodelo2010" target="black">code on GItHub</a></p>
    </div>
     
