--- a/educator/index.html
+++ b/educator/index.html
@@ -7,7 +7,7 @@
 
 <canvas id="starfield"></canvas>
 
-<div id='toppanel'><a class="back" href="../">&lt; back (ESC)</a>  |  <a target="_blank" href="https://speakerdeck.com/dankievua">my speakerdeck</a></div>
+<div id='toppanel'><a class="back" href="../"><b>&lt; back (ESC)</b></a>  |  <a target="_blank" href="https://speakerdeck.com/dankievua">my speakerdeck</a></div>
 
 <div id="hdr"><h1><span id='hin'>Educator, Tutor, Speaker<span></h1></div>
 
