--- a/startups/index.html
+++ b/startups/index.html
@@ -7,7 +7,7 @@
 <canvas id="starfield"></canvas>
 
 
-<div id='toppanel'><a class="back" href="../">&lt; back (ESC)</a>  |  <a target="_blank" href="https://www.github.com/danvoronov">my github</a> |  <a target="_blank" href="https://www.codewars.com/users/danvoronov">my codewars</a></div>
+<div id='toppanel'><a class="back" href="../"><b>&lt; back (ESC)</b></a>  |  <a target="_blank" href="https://www.github.com/danvoronov">my github</a> |  <a target="_blank" href="https://www.codewars.com/users/danvoronov">my codewars</a></div>
 
 <div id="hdr"><h1><span id='hin'>My startups<span></h1></div>
 
