--- a/educator/index.html
+++ b/educator/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html><html><head><meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
   <meta name="author" content="Dan Voronov">
   <title>Dan Voronov as Educator, Tutor, Speaker</title>
-  <style type="text/css">.item {width: 370px }</style>
-  <link rel="stylesheet" href="../dan-files/css/showcase.css">
-</head><body>
+  <style type="text/css">
+    
+    .item {width: 370px }
+    .large {width: 600px}
+  
+    .item {
+      border-radius: 4px;
+     box-shadow:
+     20px 5px 40px #CF77F3,
+       0px 5px 40px #009BFF,
+      -20px 5px 40px #2AC9DB;
+      background-image: linear-gradient(-90deg, #CF77F3 0%, #009BFF 47%, #2AC9DB 100%);
+    }
 
-<canvas id="starfield"></canvas>
+</style>
+  <link rel="stylesheet" href="../dan-files/css/showcase.css">
+</head><body style="background-color: #590c57;">
 
 <div id='toppanel'><a class="back" href="../"><b>&lt; back (ESC)</b></a>  |  <a target="_blank" href="https://speakerdeck.com/dankievua">my speakerdeck</a></div>
 
