--- a/startups/index.html
+++ b/startups/index.html
@@ -2,10 +2,9 @@
   <title>Startups by Dan Voronov</title>
   <link rel="stylesheet" href="../dan-files/css/showcase.css">
   <style type="text/css">.item {width: 600px }</style>
-</head><body>
+</head><body style="background-color: #481147;">
 
 <canvas id="starfield"></canvas>
-
 
 <div id='toppanel'><a class="back" href="../"><b>&lt; back (ESC)</b></a>  |  <a target="_blank" href="https://www.github.com/danvoronov">my github</a> |  <a target="_blank" href="https://www.codewars.com/users/danvoronov">my codewars</a></div>
 
