move идщсл е strp

--- a/startups/index.html
+++ b/startups/index.html
@@ -67,6 +67,14 @@
       <p class="codeinfo">Created by me powerfull offline training program + online awareness marathon-diary with personal tasks [facebook group] + discussion support group</p>
     </div>    
   </div>
+  <div class='cont' style="padding-top: 40px;">
+    <div class='item' style=" font-size: 0.9em;">
+    <h3>Co-founder of "Sex Education Week"</h3>
+      <p>podcast-interview: <a href="https://www.mixcloud.com/OFRUkraine/%D1%81%D0%B5%D0%BA%D1%81-%D0%BF%D1%80%D0%BE%D1%81%D0%B2%D0%B5%D1%89%D0%B5%D0%BD%D0%B8%D0%B5-%D0%B2%D1%8B%D0%BF%D1%83%D1%81%D0%BA-6-%D0%BE%D1%80%D0%B3%D0%B0%D0%BD%D0%B8%D0%B7%D0%B0%D1%82%D0%BE%D1%80%D1%8B-sex-education-week/" target="black">mixcloud.com </a></p>
+   <p><span>2017–18</span> Open educational project "Sex Education Week", Kyiv.</p>
+    <p>Unlucky one. Fistly, one of our lectures was attacked with tear-gas by group of ultra-right anti-LGBTQ activists (<a href="https://kp.ua/incidents/580574-v-kyeve-neyzvestnye-napaly-na-uchastnykov-lektsyy-transhender" target="black">news</a>). Then our facebook public was hacked and stolen. Our brand was spoiled (<a href="https://danvoronov.medium.com/%D0%BB%D0%B0%D0%B9%D0%BA%D0%B8-%D0%B2-%D0%BD%D0%B5%D0%B1%D0%B5%D0%B7%D0%BF%D0%B5%D1%86%D1%96-9082342bf7aa" target="black">my article</a>).  </p>
+  </div> 
+ </div> 
 </div>
 
 <div class="precont">
@@ -91,19 +99,6 @@
 
   </div>
 </div>
-
-
-<div class="precont">
-  <h2>ED</h2>
-  <div class='cont'>
-    <div class='item' style=" font-size: 0.9em;">
-    <h3>Co-founder of "Sex Education Week"</h3>
-      <p>podcast-interview: <a href="https://www.mixcloud.com/OFRUkraine/%D1%81%D0%B5%D0%BA%D1%81-%D0%BF%D1%80%D0%BE%D1%81%D0%B2%D0%B5%D1%89%D0%B5%D0%BD%D0%B8%D0%B5-%D0%B2%D1%8B%D0%BF%D1%83%D1%81%D0%BA-6-%D0%BE%D1%80%D0%B3%D0%B0%D0%BD%D0%B8%D0%B7%D0%B0%D1%82%D0%BE%D1%80%D1%8B-sex-education-week/" target="black">mixcloud.com </a></p>
-   <p><span>2017–18</span> Open educational project "Sex Education Week", Kyiv.</p>
-    <p>Unlucky one. Fistly, one of our lectures was attacked with tear-gas by group of ultra-right anti-LGBTQ activists (<a href="https://kp.ua/incidents/580574-v-kyeve-neyzvestnye-napaly-na-uchastnykov-lektsyy-transhender" target="black">news</a>). Then our facebook public was hacked and stolen. Our brand was spoiled (<a href="https://danvoronov.medium.com/%D0%BB%D0%B0%D0%B9%D0%BA%D0%B8-%D0%B2-%D0%BD%D0%B5%D0%B1%D0%B5%D0%B7%D0%BF%D0%B5%D1%86%D1%96-9082342bf7aa" target="black">my article</a>).  </p>
-  </div> 
- </div> 
-</div> 
 
 <script src='../dan-files/js/bg.js'></script>
 <script src='../dan-files/js/ga.js'></script>
