--- a/startups/index.html
+++ b/startups/index.html
@@ -10,23 +10,27 @@
 
 <div id="hdr"><h1><span id='hin'>My startups<span></h1></div>
 
+<div id="scrlght">
 <div class="precont">
   <h2>CITY AND MAPS</h2>
  
   <div class='cont'>
 
     <div class='item'>
-      <h3>Babiy Yar history</h3>
+      <h3>Babiy Yar history bot</h3>
       <img src="../dan-files/i/strp/botBY.jpg" style="height: 338px;">
-      <p><span>2019–23</span> Telegram bot that use live location feature to tell immersive story about Babiy Yar (Kyiv) events during WW2 and holocaust tragedy. <r style="color:red">Will be available after COVID-19 pandemic</r>.</p>
+      <p><span>2019–23</span> Telegram bot that use live location feature to tell immersive story about Babiy Yar (Kyiv) events during WW2 and holocaust tragedy.</p>
       <p class="codeinfo">Started as google apps script and then evolved to fully custom engine with KML parser and Telegam bot API POST wrapper [node.js].</p>
+      <p class='covid'>will be available after COVID-19 pandemic</p>
    </div>
     
     <div class='item'>
       <h3>Throught the Kyiv</h3>
       <img src="../dan-files/i/strp/throughtthekiev.jpg" style="width: 600px;">
-      <p><span>2017–19</span> New Kyiv urban hikes: Throught the City for all day walking. 35-44 km in a group of strangers for free. <r style="color:red">Was interrupted by COVID-19 pandemic</r>.</p>
-      <p class="codeinfo">Elaboration of an interesting routes. Coordination in telegram <a href='https://t.me/kievpohod' target="black">@kievpohod</a>. JS code for showing route's main points and estimated time on map.</p>
+      <p style="font-size:0.8em">hashtag <a href='https://duckduckgo.com/?q=%23%D0%9A%D0%98%D0%95%D0%92%D0%BD%D0%B0%D1%81%D0%BA%D0%B2%D0%BE%D0%B7%D1%8C&t=h_&ia=web' target="black">#КИЕВнасквозь</a></p>
+      <p><span>2017–19</span> I've developed new Kyiv urban hikes: Throught the City for all day walking. 35-44 km in a group of strangers for free.</p>
+      <p class="codeinfo">Official telegram <a href='https://t.me/kievpohod' target="black">@kievpohod</a>. JS code for showing route's main points and estimated time on map.</p>
+      <p class='covid'>was interrupted by COVID-19 pandemic</p>
     </div>
     
     <div class='item'>
@@ -98,6 +102,7 @@
    </div> 
 
   </div>
+</div>
 </div>
 
 <script src='../dan-files/js/bg.js'></script>
