--- a/educator/index.html
+++ b/educator/index.html
@@ -90,7 +90,7 @@
     </div>    
 
     <div class='item large'>
-      <h3>Polyamory&RA events</h3>
+      <h3>Polyamory & RA events</h3>
       <center><img src="../dan-files/i/edu/polyclub.png" style="width: 355px;"></center>
       <p><span>2014-19. Kyiv.</span> There was a lot of events orginized by me to unite non-monogamous peolple. We held feature and documentary films screenings. We held meetings-discussions in nature and in parks, in the forest, on the beach, in cafes, in co-working and community centers. We run polyamory speed-datings.</p>
 
@@ -117,7 +117,7 @@
     </div> 
 
     <div class='item'>
-      <h3>Awerneses practices</h3>
+      <h3>Awareness practices</h3>
       <img src="../dan-files/i/edu/awer.jpg" style="width: 355px;">
       <p><span>2016. Kyiv</span> Each meeting had a unique theme. Participants were asked to tackled it using three practices in turn: (1) writing stream of consciousness (2) observational meditation (3) authentic body movement with closed eyes.</p>
       <p>Everyone discovered something new for theyself and can share this with the group.</p>
