--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 <title>Dan Voronov — Personal site</title> 
 <link rel="stylesheet" href="dan-files/css/graph.css">	
 <style type="text/css">body { margin:0; padding:0; background-size: cover;
+    background-color: black;
     background:url("dan-files/Milky_Way_Galaxy.jpg") no-repeat center center fixed;  
 }</style>
 </head>
-<body style="background-color: black;"><div id="graph"></div>
+<body><div id="graph"></div>
 <script src="dan-files/js/graph.js"></script>
 <script src="dan-files/js/ga.js"></script>
 </body></html>
