--- a/startups/index.html
+++ b/startups/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html><html><head><meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
   <title>Startups by Dan Voronov</title>
   <link rel="stylesheet" href="../dan-files/css/showcase.css">
-  <style type="text/css">.item {width: 600px }</style>
+  <style type="text/css">.item {width: 552px }</style>
 </head><body style="background-color: #481147;">
 
 <canvas id="starfield"></canvas>
 
 <div id='toppanel'><a class="back" href="../"><b>&lt; back (ESC)</b></a>  |  <a target="_blank" href="https://www.github.com/danvoronov">my github</a> |  <a target="_blank" href="https://www.codewars.com/users/danvoronov">my codewars</a></div>
 
-<div id="hdr"><h1><span id='hin'>My startups<span></h1></div>
+<div id="hdr"><h1><span id='hin'>My startups & projects<span></h1></div>
 
 <div id="scrlght">
 <div class="precont">
@@ -26,7 +26,7 @@
     
     <div class='item'>
       <h3>Throught the Kyiv</h3>
-      <img src="../dan-files/i/strp/throughtthekiev.jpg" style="width: 600px;">
+      <img src="../dan-files/i/strp/throughtthekiev.jpg" style="width: 552px;">
       <p style="font-size:0.8em">hashtag <a href='https://duckduckgo.com/?q=%23%D0%9A%D0%98%D0%95%D0%92%D0%BD%D0%B0%D1%81%D0%BA%D0%B2%D0%BE%D0%B7%D1%8C&t=h_&ia=web' target="black">#КИЕВнасквозь</a></p>
       <p><span>2017–19</span> I've developed new Kyiv urban hikes: Throught the City for all day walking. 35-44 km in a group of strangers for free.</p>
       <p class="codeinfo">Official telegram <a href='https://t.me/kievpohod' target="black">@kievpohod</a>. JS code for showing route's main points and estimated time on map.</p>
@@ -35,7 +35,7 @@
     
     <div class='item'>
       <h3>Falafel map</h3>
-      <img src="../dan-files/i/strp/falafelmap.jpg" style="width: 600px;">    
+      <img src="../dan-files/i/strp/falafelmap.jpg" style="width: 552px;">    
       <p><span>2016–17</span> Mapping of Kyiv's falafel points with price and commenting. Active exploration and degustation around the city. </p>
       <p>Managing community of falafel lovers in vk.com and fb. </p>
       <p class="codeinfo">JS code. Transition from MapBox to Google map. DISQUS commenting widget. Archive on <a href="http://apps.danvoronov.com/kievfalafel/" target="black">/kievfalafel</a></p>
@@ -66,13 +66,13 @@
     </div>
     <div class='item'>
       <h3>Coping with jealousy</h3>
-      <img src="../dan-files/i/strp/revnost.png" style="width: 600px;">  
+      <img src="../dan-files/i/strp/revnost.png" style="width: 552px;">  
       <p><span>2016–17. Kyiv, Kharkiv</span> Integrated tranformational experience for overcoming personal limits in relationships. </p>
       <p class="codeinfo">Created by me powerfull offline training program + online awareness marathon-diary with personal tasks [facebook group] + discussion support group</p>
     </div>    
   </div>
   <div class='cont' style="padding-top: 40px;">
-    <div class='item' style=" font-size: 0.9em;">
+    <div class='item' style=" font-size: 0.95em;">
     <h3>Co-founder of "Sex Education Week"</h3>
       <p>podcast-interview: <a href="https://www.mixcloud.com/OFRUkraine/%D1%81%D0%B5%D0%BA%D1%81-%D0%BF%D1%80%D0%BE%D1%81%D0%B2%D0%B5%D1%89%D0%B5%D0%BD%D0%B8%D0%B5-%D0%B2%D1%8B%D0%BF%D1%83%D1%81%D0%BA-6-%D0%BE%D1%80%D0%B3%D0%B0%D0%BD%D0%B8%D0%B7%D0%B0%D1%82%D0%BE%D1%80%D1%8B-sex-education-week/" target="black">mixcloud.com </a></p>
    <p><span>2017–18</span> Open educational project "Sex Education Week", Kyiv.</p>
@@ -87,7 +87,7 @@
 
     <div class='item'>
       <h3>Svoyo Delo</h3>
-     <p><iframe src="https://player.vimeo.com/video/12242881?color=ff9933" width="600" height="338" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></p>
+     <p><iframe src="https://player.vimeo.com/video/12242881?color=ff9933" width="552" height="330" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></p>
      <p><span>2010-11</span> Online system for career guidance. Based on my <a href="https://maup.com.ua/eng/index.html" target="black">IAPM</a> graduation research and extended with a personality test for greater accuracy. Has database of various professions.</p>
 
       <p class="codeinfo">Codded and designed by me from scratch. LAMP (MySQL, PHP) and jQuery + jQuery UI.</p>
@@ -98,7 +98,8 @@
       <h3>Biorhythms calculator</h3>
       <img src="../dan-files/i/strp/PVB.png" style="height: 338px;"><br>
      <p><span>2003–07</span> Windows app for calculating your personal biorhythms cycles by date of birth (not scientific method).</p>
-     <p class="codeinfo">Started as personal education project on Turbo Pascal. Then was recodded in Delphi. Russian version at <a href="http://www.bioritmi.narod.ru/prog.html" target="black">bioritmi.narod.ru</a> was freeware. In 2005 was translated into English and tried to sell as shareware.</p>
+     <p class="codeinfo">Started as personal education project on Turbo Pascal 7.0. Then was recodded in Delphi 5 and 7. In 2005 translated into English and I tried to sell as shareware.</p>
+     <p>Rus version <a href="http://www.bioritmi.narod.ru/prog.html" target="black">bioritmi.narod.ru</a> was freeware.</p>
    </div> 
 
   </div>
