--- a/art/index.html
+++ b/art/index.html
@@ -52,7 +52,7 @@
     
     <div style="margin: auto; width: 600px;  background-color: black; color: white; border: 10px solid #22c76e; left: 0; top: -60px; right: 0; bottom: 0; padding: 30px;">
       
-      <a href="../" style="color: #DD4723"><b>&lt; back (ESC)</b></a> | <a href="https://danvoronov.medium.com/%D0%B4%D0%B0%D0%BD-%D0%B2%D0%BE%D1%80%D0%BE%D0%BD%D0%BE%D0%B2-%D0%B0%D1%80%D1%82-2008-18-268ff6376777" target="black">все сразу на русском</a>
+      <a href="../" style="color: #DD4723"><b>&lt; back (ESC)</b></a> &nbsp; | &nbsp; <a href="https://danvoronov.medium.com/%D0%B4%D0%B0%D0%BD-%D0%B2%D0%BE%D1%80%D0%BE%D0%BD%D0%BE%D0%B2-%D0%B0%D1%80%D1%82-2008-18-268ff6376777" target="black">все сразу на русском</a>
 
         <br><br><br>
         <h2>ARTWORKS</h2><div id="mn">
