--- a/educator/index.html
+++ b/educator/index.html
@@ -14,6 +14,9 @@
       -20px 5px 40px #2AC9DB;
       background-image: linear-gradient(-90deg, #CF77F3 0%, #009BFF 47%, #2AC9DB 100%);
     }
+    .cont {
+      padding-top: 8px;
+    }
 
 </style>
   <link rel="stylesheet" href="../dan-files/css/showcase.css">
@@ -30,7 +33,7 @@
 
     <div class='item'>
       <h3>Essentialism</h3>
-      <center><img src="../dan-files/i/edu/ess.jpg" style="width: 246px;"></center>
+      <center><img src="../dan-files/i/edu/ess.jpg" style="width: 332px;"></center>
       <p><span>2018-20</span> Retelling Greg McKeown "Essentialism" book (<a target="_blank" href="https://www.goodreads.com/book/show/18077875-essentialism">GR</a>) with additinal research and personal experience. </p><p>Сhapter by chapter. 20+ mobile videos and mindmaps in telegram channel. Final summary stream was on my youtube channel.</p>
       <p>TG: <a target="_blank" href="https://t.me/essentialismbook">@essentialismbook</a></p>
       <p>YT: <a target="_blank" href="https://youtu.be/NPcgENTSRuw">final stream</a></p>
