--- a/startups/index.html
+++ b/startups/index.html
@@ -38,7 +38,7 @@
       <img src="../dan-files/i/strp/falafelmap.jpg" style="width: 552px;">    
       <p><span>2016–17</span> Mapping of Kyiv's falafel points with price and commenting. Active exploration and degustation around the city. </p>
       <p>Managing community of falafel lovers in vk.com and fb. </p>
-      <p class="codeinfo">JS code. Transition from MapBox to Google map. DISQUS commenting widget. Archive on <a href="http://apps.danvoronov.com/kievfalafel/" target="black">/kievfalafel</a></p>
+      <p class="codeinfo">JS code. MapBox API. DISQUS commenting widget. Data in geoJSON. Archive on <a href="http://apps.danvoronov.com/kievfalafel/" target="black">/kievfalafel</a></p>
     </div>
 
      <div class='item'>
@@ -90,8 +90,8 @@
      <p><iframe src="https://player.vimeo.com/video/12242881?color=ff9933" width="552" height="330" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></p>
      <p><span>2010-11</span> Online system for career guidance. Based on my <a href="https://maup.com.ua/eng/index.html" target="black">IAPM</a> graduation research and extended with a personality test for greater accuracy. Has database of various professions.</p>
 
-      <p class="codeinfo">Codded and designed by me from scratch. LAMP (MySQL, PHP) and jQuery + jQuery UI.</p>
-      <p>Was at <i>svoyodelo.com</i>. See <a href="https://github.com/danvoronov/svoyodelo2010" target="black">code on GItHub</a></p>
+      <p class="codeinfo">Codded and designed by me from scratch. LAMP (MySQL, PHP) and jQuery + jQuery UI and Google graph API.</p>
+      <p>Was at <i>svoyodelo.com</i>. See <a href="https://github.com/danvoronov/svoyodelo2010" target="black">code on GitHub</a></p>
    </div>
     
     <div class='item'>
