--- a/educator/index.html
+++ b/educator/index.html
@@ -8,6 +8,7 @@
   
     .item {
       border-radius: 4px;
+      border: 7px solid #00f4cc; 
      box-shadow:
      20px 5px 40px #CF77F3,
        0px 5px 40px #009BFF,
